@@ -877,53 +877,11 @@ ObjectContentType FrameLoaderClientQt::objectContentType(const KURL& url, const 
 }
 
 static const CSSPropertyID qstyleSheetProperties[] = {
-    CSS_PROP_BACKGROUND_ATTACHMENT,
-    CSS_PROP_BACKGROUND_COLOR,
-    CSS_PROP_BACKGROUND_IMAGE,
-    CSS_PROP_BACKGROUND_REPEAT,
-    CSS_PROP_BORDER_BOTTOM_COLOR,
-    CSS_PROP_BORDER_BOTTOM_STYLE,
-    CSS_PROP_BORDER_BOTTOM_WIDTH,
-    CSS_PROP_BORDER_LEFT_COLOR,
-    CSS_PROP_BORDER_LEFT_STYLE,
-    CSS_PROP_BORDER_LEFT_WIDTH,
-    CSS_PROP_BORDER_RIGHT_COLOR,
-    CSS_PROP_BORDER_RIGHT_STYLE,
-    CSS_PROP_BORDER_RIGHT_WIDTH,
-    CSS_PROP_BORDER_TOP_COLOR,
-    CSS_PROP_BORDER_TOP_STYLE,
-    CSS_PROP_BORDER_TOP_WIDTH,
-    CSS_PROP_BOTTOM,
     CSS_PROP_COLOR,
-    CSS_PROP_FLOAT,
     CSS_PROP_FONT_FAMILY,
     CSS_PROP_FONT_SIZE,
     CSS_PROP_FONT_STYLE,
-    CSS_PROP_FONT_WEIGHT,
-    CSS_PROP_HEIGHT,
-    CSS_PROP_LEFT,
-    CSS_PROP_MARGIN_BOTTOM,
-    CSS_PROP_MARGIN_LEFT,
-    CSS_PROP_MARGIN_RIGHT,
-    CSS_PROP_MARGIN_TOP,
-    CSS_PROP_MAX_HEIGHT,
-    CSS_PROP_MAX_WIDTH,
-    CSS_PROP_MIN_HEIGHT,
-    CSS_PROP_MIN_WIDTH,
-    CSS_PROP_OPACITY,
-    CSS_PROP_PADDING_BOTTOM,
-    CSS_PROP_PADDING_LEFT,
-    CSS_PROP_PADDING_RIGHT,
-    CSS_PROP_PADDING_TOP,
-    CSS_PROP_POSITION,
-    CSS_PROP_RIGHT,
-    CSS_PROP_TEXT_ALIGN,
-    CSS_PROP_TEXT_DECORATION,
-    CSS_PROP_TEXT_INDENT,
-    CSS_PROP_TOP,
-    CSS_PROP_VERTICAL_ALIGN,
-    CSS_PROP_WHITE_SPACE,
-    CSS_PROP_WIDTH
+    CSS_PROP_FONT_WEIGHT
 };
 
 const unsigned numqStyleSheetProperties = sizeof(qstyleSheetProperties) / sizeof(qstyleSheetProperties[0]);
