@@ -1,5 +1,15 @@
 2007-08-10  Lars Knoll  <lars@trolltech.com>
 
+        Reviewed and landed by Simon.
+
+        Limit the set of properties from the computed style to apply to Qt
+        plugin widgets, as only a few of them make sense.
+
+        * WebCoreSupport/FrameLoaderClientQt.cpp:
+        (WebCore::):
+
+2007-08-10  Lars Knoll  <lars@trolltech.com>
+
         Reviewed by Simon.
 
         Use <object>'s classid attribute for creation of plugins through QWebPage::createPlugin.
